--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,7 +13,7 @@
         <nav class="footer-nav">
           <a href="/privacy" target="_parent">Privacy Policy</a>
           <a href="/terms" target="_parent">Terms of Service</a>
-          <a href="contact.html" target="_parent">Contact Us</a>
+          <a href="/contact" target="_parent">Contact Us</a>
         </nav>
       </div>
     </footer>
