--- a/templates/header.html
+++ b/templates/header.html
@@ -11,8 +11,8 @@
       <div>random image</div>
       <nav id="nav-bar">
         <a href="/" target="_parent">Home</a>
-        <a href="" target="_parent">About Us</a>
-        <a href="" target="_parent">Pricing</a>
+        <a href="/about" target="_parent">About Us</a>
+        <a href="/pricing" target="_parent">Pricing</a>
         <a href="/account" target="_parent">My Account</a>
         <div class="dropdown">
           <button class="dropdown-button">Browse</button>
@@ -23,8 +23,8 @@
             >
           </div>
         </div>
-        <a href="" target="_parent">FAQs</a>
-        <a href="" target="_parent">Contact</a>
+        <a href="/faq" target="_parent">FAQs</a>
+        <a href="/contact" target="_parent">Contact</a>
       </nav>
     </header>
     <nav id="mobile-vertical-navbar">
@@ -34,10 +34,10 @@
         onclick="showVerticalNavbar()"
       />
       <div id="hidden-vertical-navbar" style="display: none">
-        <a href="home.html" target="_parent">Home</a>
-        <a href="" target="_parent">About Us</a>
-        <a href="" target="_parent">Pricing</a>
-        <a href="account.html" target="_parent">My Account</a>
+        <a href="/" target="_parent">Home</a>
+        <a href="/about" target="_parent">About Us</a>
+        <a href="/pricing" target="_parent">Pricing</a>
+        <a href="/account" target="_parent">My Account</a>
         <div class="dropdown">
           <button class="dropdown-button">Browse</button>
           <div class="dropdown-content">
@@ -47,8 +47,8 @@
             >
           </div>
         </div>
-        <a href="" target="_parent">FAQs</a>
-        <a href="" target="_parent">Contact</a>
+        <a href="/faq" target="_parent">FAQs</a>
+        <a href="/contact" target="_parent">Contact</a>
       </div>
     </nav>
     <script src="/static/general.js"></script>
