add welcome text

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,8 @@
       <iframe src="/header" id="iframe-header"></iframe>
     </div>
 
+    <h1 class="text-center mb-4">Welcome to your online learning platform</h1>
+
     <div class="featured-container">
       <h2>Get started with Our Featured Course</h2>
       <button class="featured-button">View all Courses</button>
