fixing register_account styling

--- a/templates/register_account.html
+++ b/templates/register_account.html
@@ -70,15 +70,18 @@
             <input type="file" name="profile-picture" id="profile-picture" />
           </div>
           <!-- first name -->
-          <div class="input-box">
-            <label for="first-name">First Name*</label>
-            <input type="text" name="first-name" id="first-name" required />
+          <div id="horizontal-container">
+            <div class="input-box">
+              <label for="first-name">First Name*</label>
+              <input type="text" name="first-name" id="first-name" required />
+            </div>
+            <!-- last name -->
+            <div class="input-box">
+              <label for="last-name">Last Name*</label>
+              <input type="text" name="last-name" id="last-name" required />
+            </div>
           </div>
-          <!-- last name -->
-          <div class="input-box">
-            <label for="last-name">Last Name*</label>
-            <input type="text" name="last-name" id="last-name" required />
-          </div>
+
           <!-- address -->
           <div class="input-box">
             <label for="address">Address*</label>
