--- a/static/styles/register_account.css
+++ b/static/styles/register_account.css
@@ -1,6 +1,3 @@
-body {
-  padding-top: 70px;
-}
 #register-form {
   display: flex;
   flex-direction: column;
@@ -29,11 +26,11 @@ body {
 form {
   position: absolute;
   width: 600px;
+  top: 65px;
   right: 0;
-  margin: 0 150px 100px 0;
+  margin: 0 150px 0 0;
   background-color: white;
-
-  padding: 10px 0;
+  padding: 20px 0;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0.5, 0.5, 0.5, 0.5);
 }
@@ -93,6 +90,14 @@ form .account-type-div p {
   margin-bottom: 5px;
 }
 
+#horizontal-container {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+#horizontal-container .input-box {
+  width: 130px;
+}
 #button-container {
   width: 85%;
   display: flex;
