change endpoint name

--- a/templates/header.html
+++ b/templates/header.html
@@ -23,7 +23,7 @@
             >
           </div>
         </div>
-        <a href="/faq" target="_parent">FAQs</a>
+        <a href="/faqs" target="_parent">FAQs</a>
         <a href="/contact" target="_parent">Contact</a>
       </nav>
     </header>
@@ -47,7 +47,7 @@
             >
           </div>
         </div>
-        <a href="/faq" target="_parent">FAQs</a>
+        <a href="/faqs" target="_parent">FAQs</a>
         <a href="/contact" target="_parent">Contact</a>
       </div>
     </nav>
