Updated faqs and pricing page to correctly display header and footer

--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -8,14 +8,17 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 
-    <link rel="stylesheet" href="../static/styles/general.css" />
+    <link rel="stylesheet" href="../static/styles/faq.css" />
     <link rel="stylesheet" href="../static/styles/header.css" />
     <link rel="stylesheet" href="../static/styles/footer.css" />
-    <link rel="stylesheet" href="../static/styles/faq.css" />
+    <link rel="stylesheet" href="../static/general.css" />
 
     <title>FAQ</title>
 </head>
 <body>
+    <div id="body-container">
+        <iframe src="/header" id="iframe-header"></iframe>
+    </div>
     <div class="container mt-5">
         <h1 class="text-center">Frequently Asked Questions</h1>
 
@@ -56,6 +59,7 @@
             </details>
         </div>
     </div>
-
+    <iframe src="/footer" id="iframe-footer"></iframe>
+    <script src="/static/general.js"></script>
 </body>
 </html>
