--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="../static/styles/pricing.css" />
-
+    <link rel="stylesheet" href="../static/general.css" />
 
     <title>Pricing</title>
 </head>
 <body>
-    <iframe src="/header" id="iframe-header"></iframe>
+    <div id="body-container">
+        <iframe src="/header" id="iframe-header"></iframe>
+    </div>
     <h1>Our Prices</h1>
     <p><p style="text-align:center">
         Instructors
@@ -144,9 +146,8 @@
                 </tr>
             </tbody>
         </table>
-        <iframe src="/footer" id="iframe-footer"></iframe>
-        <script src="/static/general.js"></script>
     </div>
-    
+    <iframe src="/footer" id="iframe-footer"></iframe>
+    <script src="/static/general.js"></script>
 </body>
 </html>
