--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -17,13 +17,14 @@
         <iframe src="/header" id="iframe-header"></iframe>
     </div>
     <h1>Our Prices</h1>
-    <p><p style="text-align:center">
-        Instructors
-    </p>
     
     <div class="table">
         <table class="price-table">
             <tbody>
+                <tr>
+                    <td>INSTRUCTORS</td>
+                    
+                </tr>
                 <tr>
                     <td class="price-blank"></td>
                     <td class="price-blank"></td>
