--- a/templates/course_details.html
+++ b/templates/course_details.html
@@ -26,15 +26,15 @@
       <p><strong>Price:</strong> ${{ course.price }}</p>
       <p><strong>Created At:</strong> {{ course.created_at }}</p>
       
-      {% if user_role == 'learner' %}
+      {% if user_role == 'learner' or user_role == 'admin' %}
         <button>Trial For 2-Day</button>
         <form action="/courses/order/{{course.id}}" method="POST">
           <button>Enrol</button>
         </form>
-      {% elif user_role == 'instructor' %}
+      {% endif %}
+      {% if user_role == 'instructor' or user_role == 'admin' %}
         <button>Edit course</button>
       {% endif %}
-    </div>
    
     <iframe src="/footer" id="iframe-footer"></iframe>
     <script src="/static/general.js"></script>
