--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/styles/home.css" />
     <link rel="stylesheet" href="/static/styles/header.css" />
@@ -130,7 +131,7 @@
 
             <div class="row">
                 <div class="col-md-6 team-member">
-                    <img src="path-to-random-photo3.jpg" alt="Lisa Maria Huynh" id="modalBtn3">
+                    <img src="/static/img/lisa_portrait.PNG" alt="Lisa Maria Huynh" id="modalBtn3">
                     <h4>Lisa Maria Huynh</h4>
                     <p>RMIT University, Saigon South Campus</p>
                 </div>
@@ -150,6 +151,9 @@
             <span class="close" id="close1">&times;</span>
             <h2>Duy Huynh Ngoc</h2>
             <p>Email: <a href="mailto:s3924704@rmit.edu.vn">s3924704@rmit.edu.vn</a></p>
+            <p>Age: 21</p>
+            <p>Country: Vietnam</p>
+            <p>Major: BSc in Software Engineering</p>
             <p>RMIT University, Saigon South Campus</p>
         </div>
     </div>
@@ -160,26 +164,35 @@
             <span class="close" id="close2">&times;</span>
             <h2>Eduardo Salcedo Fuentes</h2>
             <p>Email: <a href="mailto:s4118015@rmit.edu.vn">s4118015@rmit.edu.vn</a></p>
+            <p>Age: 21</p>
+            <p>Country: United States</p>
+            <p>Major: BSc in Software Engineering</p>
             <p>RMIT University, Saigon South Campus</p>
         </div>
     </div>
-
+    
     <!-- Modal for Lisa Maria Huynh -->
     <div id="myModal3" class="modal">
         <div class="modal-content">
             <span class="close" id="close3">&times;</span>
             <h2>Lisa Maria Huynh</h2>
             <p>Email: <a href="mailto:s4110118@rmit.edu.vn">s4110118@rmit.edu.vn</a></p>
+            <p>Age: 23</p>
+            <p>Country: Denmark</p>
+            <p>Major: MSc in Computer Engineering</p>
             <p>RMIT University, Saigon South Campus</p>
         </div>
     </div>
-
+    
     <!-- Modal for Tu Tran Thanh -->
     <div id="myModal4" class="modal">
         <div class="modal-content">
             <span class="close" id="close4">&times;</span>
             <h2>Tu Tran Thanh</h2>
             <p>Email: <a href="mailto:s3957386@rmit.edu.vn">s3957386@rmit.edu.vn</a></p>
+            <p>Age: XX</p>
+            <p>Country: Vietnam</p>
+            <p>Major: BSc in Software Engineering</p>
             <p>RMIT University, Saigon South Campus</p>
         </div>
     </div>
