--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../static/styles/footer.css" />
     <link rel="stylesheet" href="../static/general.css" />
 
-    <title>FAQ</title>
+    <title>FAQs</title>
 </head>
 <body>
     <div id="body-container">
