--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -1,5 +1,6 @@
 body {
   margin: 0px;
+  font-family: 'Montserrat', sans-serif;
 }
 #footer {
   background-color: #333; /* Dark background for the footer */
@@ -28,3 +29,4 @@ body {
 .footer-nav a:hover {
   text-decoration: underline;
 }
+
