make link to course browse by name

--- a/templates/home.html
+++ b/templates/home.html
@@ -109,7 +109,9 @@
         {% endfor %}
       </div>
 
-      <button class="view-all">View all</button>
+      <a href="/courses/browse/name">
+        <button class="view-all">View all</button>
+      </a>
     </div>
 
     <!-- New Instructor -->
@@ -138,7 +140,9 @@
         {% endfor %}
       </div>
 
-      <button class="view-all">View all</button>
+      <a href="/courses/browse/name">
+        <button class="view-all">View all</button>
+      </a>
     </div>
 
     <!-- add logout -->
