--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="../static/styles/pricing.css" />
-    <link rel="stylesheet" href="../static/general.css" />
+    <link rel="stylesheet" href="/static/styles/pricing.css" />
+    <link rel="stylesheet" href="/static/general.css" />
 
     <title>Pricing</title>
 </head>
