--- a/static/general.css
+++ b/static/general.css
@@ -82,4 +82,9 @@ h1 {
   font-weight: 700;
   font-size: 32px;
   color: #609966;
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 30px;
+  font-weight: bold;
+ 
 }
